# mandelbrot

./: CMakeLists.txt  README.md  complex.c  complex.h  image_handler.c  image_handler.h  mandelbrot.c  mandelbrot.h
